--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="./styles.css">
     <title> Spaceclub </title>
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <meta property="og:title" content="Website Name" />
+<meta property="og:url" content="https://www.website.com/" />
+<meta property="og:image" content="https://www.website.com/image.png" />
+<meta property="og:description" content="A brief description of your website." />
+
 </head>
 
 <body>
