--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://alluxd.github.io/spaceclub/" />
 <meta property="og:image" content="https://alluxd.github.io/spaceclub/img/Banner.png" />
 <meta property="og:description" content="Spaceclub is a website that provides up-to-date news and information about space exploration, science, and technology. We offer a variety of articles, videos, and infographics, as well as a forum where you can discuss space news with other enthusiasts. If you're interested in staying up-to-date on the latest developments in space, then Spaceclub is the place for you. Join us today and start exploring the stars!" />
-
+<link rel="shortcut icon" href="./img/favicon.ico" />
 </head>
 
 <body>
